force-app/main/default/objects/Product__c/Product__c.object-meta.xml
<CustomObject>
    <pluralLabel>Products</pluralLabel>
    <fullName>Product__c</fullName>
    <description>Products</description>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <type>Text</type>
        <label>Product Name</label>
    </nameField>
    <label>Product</label>
</CustomObject>