force-app/main/default/objects/Product__c/fields/CabinetType__c.field-meta.xml
<CustomField>
    <fullName>CabinetType__c</fullName>
    <type>Picklist</type>
    <description>cabinet type</description>
    <inlineHelpText>select cabinet type</inlineHelpText>
    <required>true</required>
    <label>Cabinet Type</label>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cabinet 1</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Cabinet 2</fullName>
            </value>
            <value>
                <fullName>Cabinet 3</fullName>
            </value>
            <value>
                <fullName>Cabinet 4</fullName>
            </value>
            <value>
                <fullName>Cabinet 5</fullName>
            </value>
            <sorted>true</sorted>
        </valueSetDefinition>
    </valueSet>
</CustomField>