force-app/main/default/objects/Product__c/fields/SegmentType__c.field-meta.xml
<CustomField>
    <fullName>SegmentType__c</fullName>
    <type>Picklist</type>
    <description>Select Segment Type</description>
    <inlineHelpText>Select Segment Type</inlineHelpText>
    <required>true</required>
    <label>Segment Type</label>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Segment 1</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Segment 2</fullName>
            </value>
            <value>
                <fullName>Segment 3</fullName>
            </value>
            <value>
                <fullName>Segment 4</fullName>
            </value>
            <value>
                <fullName>Segment 5</fullName>
            </value>
            <sorted>true</sorted>
        </valueSetDefinition>
    </valueSet>
</CustomField>