force-app/main/default/objects/Product__c/fields/ThemeType__c.field-meta.xml
<CustomField>
    <fullName>ThemeType__c</fullName>
    <type>Picklist</type>
    <description>Select theme type</description>
    <inlineHelpText>Select Theme Type</inlineHelpText>
    <required>true</required>
    <label>Theme Type</label>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Theme 1</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Theme 2</fullName>
            </value>
            <value>
                <fullName>Theme 3</fullName>
            </value>
            <value>
                <fullName>Theme 4</fullName>
            </value>
            <value>
                <fullName>Theme 5</fullName>
            </value>
            <sorted>true</sorted>
        </valueSetDefinition>
    </valueSet>
</CustomField>